# sneaker-portfolio

./: Dockerfile  Makefile  README.md  api-endpoints.md  docker-compose.yaml  test.json
sn-frontend/public/: index.html
sn-frontend/src/: index.js
sneaker-frontend/: package-lock.json  package.json
sneaker-frontend/src/: App.css  App.js  MainScreen.js  colors.css
sneaker-portfolio/: api.py  image.py  main.py  middle.py  migrate_id_to_uuid.py  pyproject.toml  scrape.py  test.db
sneaker-portfolio/api/: db_utils.py  main.py  scrape.py
sneaker-portfolio/api/routes/: portfolio.py
sneaker-portfolio/db_model/data/: portfolio_data.sql  shoe_data.sql
sneaker-portfolio/db_model/schema/: shoes.sql  users.sql
sneaker-server/: .gitignore  pyproject.toml  requirements.txt  test.db
sneaker-server/api/: db_utils.py  images.py  img_utils.py  main.py  scrape.py
sneaker-server/api/routes/: favorites.py  portfolio.py  search.py  user.py
sneaker-server/api/utils/: img_utils.py
sneaker-server/db_model/data/: portfolio_data.sql  shoe_data.sql  user_data.sql
sneaker-server/db_model/db_migration/: add_user.py  migrate2.py  migrate_id_to_uuid.py  migrate_order.py  rename_database.py
sneaker-server/db_model/schema/: portfolios.sql  prices.sql  shoes.sql
sneaker-server/tests/: test_attempt.py  test_scrape.py
sneaker-server/tests/mock_data/: mock_search_response.json
sneaker-server/tests/utils/: test_img_utils.py
