[tool.poetry]
name = "sneaker-portfolio"
version = "0.1.0"
description = ""
authors = ["noakanois <noakanois@gmail.com>"]
readme = "README.md"
packages = [{include = "sneaker_portfolio"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
starlette = "0.27"
aiofiles = "^23.2.1"
fake-useragent = "^1.2.1"
bs4 = "^0.0.1"
pydantic = "^2.1.1"
requests = "^2.31.0"
Pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
